WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40256
[Qt] NotificationPresenterClientQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40256
Summary
[Qt] NotificationPresenterClientQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 12:56:19 PDT
[Qt] NotificationPresenterClientQt.cpp has coding-style errors
Attachments
Patch
(1.80 KB, patch)
2010-06-07 12:56 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 12:56:56 PDT
Created
attachment 58074
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-07 16:25:11 PDT
Comment on
attachment 58074
[details]
Patch Clearing flags on attachment: 58074 Committed
r60806
: <
http://trac.webkit.org/changeset/60806
>
WebKit Commit Bot
Comment 3
2010-06-07 16:25:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug