2010-06-07  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] NotificationPresenterClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40256

        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        (WebCore::NotificationPresenterClientQt::show):

Canonical link: https://commits.webkit.org/51828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60806 268f45cc-cd09-0410-ab3c-d52691b4dbfc